Corrected action layout on mobile screen

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,7 +93,7 @@ br {
 }
 
 .actions {
-  margin: 5%;
+  /* margin: 5%; */
   text-align: center;
   display: block;
 }
